# icfp09

./: .gitignore  Main.hs  Makefile  README.md  teamca.cabal
TeamCA/: Machine.hs  Math.hs  Session.hs
TeamCA/Machine/: Codec.hs  DType.hs  SType.hs  Types.hs  Util.hs
TeamCA/Math/: Ellipse.hs
TeamCA/Strategies/: S1.hs  S2.hs  Trace.hs  Types.hs  Util.hs
vis/: hs.json  icfp.json  translate.py  vis.py
